Corrige erros de DDL no banco de dados e padroniza campos de data/status.